# isic-project

./: .env.example  .gitignore  README.md  main.py  pyproject.toml
notebooks/: 01_data_preprocessing.ipynb  02_training.ipynb  training.ipynb
src/: api.py  database.py  image_utils.py  inference.py  simple_unet.py  streamlit_app.py
